# home-radio

./: .gitignore  Cargo.toml  Dockerfile  Makefile
.cargo/: config
server/: Cargo.toml
server/src/: cli.rs  errors.rs  main.rs
server/src/backend/: file_backend.rs  mod.rs
server/src/media_service/: mod.rs  remote_media_service.rs  vlc_media_service.rs
server/src/ui/: add-media-form.html  common.js  form.js  index.css  index.html  index.js
