[package]
name = "home-radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0.0-beta.10", features = ["rustls"], default-features = false}
awc = {version="3.0.0-beta.9", features=["rustls"],default-features = false}
thiserror = "1"
log = "0.4"
env_logger="0.9"
serde_json = "1"
serde = "1"
tokio ={version= "1", features=["full"]}
clap = "2"

